--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Mfanekisopilot - Extract Text from Images Instantly</title>
     <meta name="description" content="Free online OCR tool to extract text from images, books, and handwritten notes. Instant processing with AI-powered optical character recognition." />
-    <meta name="author" content="OCR Text Scanner" />
+    <meta name="author" content="mfanekisopilot" />
     <meta name="keywords" content="OCR, text extraction, image to text, scan documents, handwriting recognition" />
     
     <!-- PWA Meta Tags -->
@@ -13,15 +13,24 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="OCR Scanner" />
+    <meta name="apple-mobile-web-app-title" content=",fanekisopilot" />
     <link rel="apple-touch-icon" href="/pwa-192x192.png" />
     <link rel="manifest" href="/manifest.webmanifest" />
 
-    <meta property="og:title" content="OCR Text Scanner - Extract Text from Images" />
+    <meta property="og:title" content="Mfanekisopilot - Extract Text from Images" />
     <meta property="og:description" content="Free online OCR tool to extract text from images instantly. Browser-based, secure, and AI-powered." />
     <meta property="og:type" content="website" />
+    <meta property="og:title" content="Inga Maholwana - Personal Portfolio" />
+    <meta property="og:description" content="Welcome to the personal portfolio of Inga Maholwana. View my projects, skills, and professional experience." />
     <meta property="og:url" content="https://ingamaholwana.github.io/PORTFOLIOWEBSITE/" />
+    <meta property="og:image" content="https://ingamaholwana.github.io/PORTFOLIOWEBSITE/social-preview.png" />
 
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Inga Maholwana - Personal Portfolio" />
+    <meta name="twitter:description" content="Welcome to the personal portfolio of Inga Maholwana. View my projects, skills, and professional experience." />
+    <meta name="twitter:site" content="@inga_maholwana" />
+    <meta name="twitter:creator" content="@inga_maholwana" />
+    <meta name="twitter:image" content="https://ingamaholwana.github.io/PORTFOLIOWEBSITE/social-preview.png" />
   </head>
 
   <body>
